--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+
 
 main{
     width: 1120px;
@@ -5,59 +11,111 @@ main{
 }
 
 :root {
-    --main-radius: 5px;
-    --main-padding: 5px;
-  }
+  --main-radius: 0px;
+}
   
-  .container {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 0.66fr 0.75fr;
-    grid-template-rows: 1fr 1fr;
+.slide__container {
+  display: grid;
+  height: 800px;
+  grid-template-columns: 0.66fr 0.75fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "sidebar main"
+    "sidebar content1";
+  grid-gap: 1rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 800;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #004d40;
+  text-align: center;
+  cursor: grab;
+}
+  
+.slide__left {
+  background-size: cover;
+  background-position: center center;
+  grid-area: sidebar;
+}
+
+.slide__right-up {
+  background-size: cover;
+  background-position: center center;
+  grid-area: main;
+}
+  
+.slide__right-down {
+  background-size: cover;
+  background-position: center center;
+  grid-area: content1;
+}
+
+button.splide__pagination__page {
+  background: #898989;
+}
+button.splide__pagination__page:hover {
+  background: #a20606;
+}
+button.splide__pagination__page.is-active {
+  background: #a20606;
+}
+.splide__arrow {
+  height: 100%;
+  width: 20%;
+}
+.splide__arrow--next {
+  right: 0;
+  cursor: url('imgs/arrow-right.svg'), auto !important;
+}
+.splide__arrow--prev {
+  left: 0;
+  cursor: url('imgs/arrow-left.svg'), auto !important;
+}
+.splide__arrow svg {
+  opacity: 0;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1119px) {
+  /* iPad landscape */
+  main {
+    width: 992px;
+  }
+  .slide__container {
+    height: 685px;
+  }
+  .splide__arrow {
+    display: none;
+  }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* iPad portrait */
+  main {
+    width: 736px;
+  }
+  .slide__container {
+    height: 505px;
+  }
+  .splide__arrow {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  /* mobile */
+  main {
+    width: 100vw;
+  }
+  .slide__container {
+    height: 150vw;
+    grid-gap: 0;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     grid-template-areas:
-      "sidebar main"
-      "sidebar content1";
-    grid-gap: 1rem;
-    font-family: "Inter", sans-serif;
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 12px;
-    color: #004d40;
-    text-align: center;
+      "sidebar";
   }
-  
-  #main {
-    background-image: url(imgs/kaiimg1.jpg);
-    background-size: cover;
-    grid-area: main;
-    border-radius: var(--main-radius);
-    padding-top: var(--main-padding);
+  .splide__arrow {
+    display: none;
   }
-  
-  #sidebar {
-    background-image: url(imgs/kaiimg3.jpg);
-    background-size: cover;
-    grid-area: sidebar;
-    border-radius: var(--main-radius);
-    padding-top: var(--main-padding);
-  }
-  
-  #content1 {
-    background-image: url(imgs/kaiimg2.jpg);
-    background-size: cover;
-    grid-area: content1;
-    border-radius: var(--main-radius);
-    padding-top: var(--main-padding);
-  }
-  
-  @media only screen and (max-width: 550px) {
-    main {
-      width: 100%;
-    }
-    .container {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      grid-template-areas:
-        "sidebar";
-    }
-  }
+}
