--- a/styles.css
+++ b/styles.css
@@ -13,23 +13,36 @@ main{
 :root {
   --main-radius: 0px;
 }
-  
+
+.splide__slide {
+  cursor: grab;
+}
+
 .slide__container {
-  display: grid;
   height: 800px;
+}
+
+.slide__grid {
+  display: grid;
   grid-template-columns: 0.66fr 0.75fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas:
     "sidebar main"
     "sidebar content1";
   grid-gap: 1rem;
-  font-family: "Inter", sans-serif;
-  font-weight: 800;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: #004d40;
-  text-align: center;
-  cursor: grab;
+}
+
+.slide__single {
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+}
+
+.slide__left {
+  background-size: cover;
+  background-position: center center;
+  grid-area: sidebar;
 }
   
 .slide__left {
@@ -109,6 +122,8 @@ button.splide__pagination__page.is-active {
   }
   .slide__container {
     height: 150vw;
+  }
+  .slide__grid {
     grid-gap: 0;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
