--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
 main{
     width: 1120px;
     margin: 0 auto;
-    margin-top: 200px;
+    margin-top: 120px;
 }
 
 :root {
@@ -91,14 +91,15 @@ button.splide__pagination__page.is-active {
 }
 .projectgrid{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1rem;
   margin-top: 200px;
+  margin-bottom: 100px;
 }
 
 .project{
   width: 100%;
-  height: 268px;
+  height: 173px;
   background-size: cover;
   position: relative;
 }
@@ -124,10 +125,10 @@ button.splide__pagination__page.is-active {
 
 .projecttext{
   position: absolute;
-  bottom: 24px;
-  left: 32px;
+  bottom: 20px;
+  left: 24px;
   color: white;
-  font-size: 30px;
+  font-size: 28px;
   opacity: 0;
 
 }
@@ -142,10 +143,13 @@ button.splide__pagination__page.is-active {
   .splide__arrow {
     display: none;
   }
+  .project{
+    height: 152px;
+  }
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (min-width: 551px) and (max-width: 1023px) {
   /* iPad portrait */
   main {
     width: 736px;
@@ -155,6 +159,12 @@ button.splide__pagination__page.is-active {
   }
   .splide__arrow {
     display: none;
+  }
+  .projectgrid{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .project{
+    height: 172px;
   }
 }
 
@@ -175,5 +185,12 @@ button.splide__pagination__page.is-active {
   }
   .splide__arrow {
     display: none;
+  }
+  .projectgrid{
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 1rem;
+  }
+  .project{
+    height: calc(33vw - 16px);
   }
 }
