--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,6 @@ html, body {
   background-color: rgb(240, 240, 240);
 }
 
-
-
 main{
     width: 1120px;
     margin: 0 auto;
@@ -120,6 +118,7 @@ button.splide__pagination__page.is-active {
   background-color: black;
   opacity: 0;
   transition: 0.3s;
+  display: block;
   
 }
 
@@ -193,4 +192,10 @@ button.splide__pagination__page.is-active {
   .project{
     height: calc(33vw - 16px);
   }
+}
+
+.Unterseite{
+  background-image: url(imgs/Kartäuserhof/01Vorher/Kartäuserhof1.JPG);
+  height: 100vh;
+  width: 100vw;
 }
