--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,42 @@ button.splide__pagination__page.is-active {
   top: 59px;
 }
 
+nav{
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+}
+
+nav a{
+  color: black;
+  text-decoration: none;
+  border-right: 1px solid black;
+  padding-right: 7px;
+  padding-left: 4px;
+}
+
+nav a:hover{
+  color: #a20606;
+}
+
+nav a.active{
+  color: #a20606;
+}
+
+nav a:last-child{
+  border-right: none;
+}
+
+.site-info{
+  text-align: center;
+  position: absolute;
+  top: 11px;
+  width: 100%;
+  font-weight: bold;
+  font-size: 16px;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1119px) {
   /* iPad landscape */
   main {
@@ -220,6 +256,12 @@ button.splide__pagination__page.is-active {
   .project{
     height: 172px;
   }
+  .site-info{
+    top: 23px;
+  }
+  nav{
+    bottom: 20px;
+  }
 }
 
 @media only screen and (max-width: 550px) {
@@ -228,7 +270,7 @@ button.splide__pagination__page.is-active {
     width: 100vw;
   }
   header {
-    height: 60px;
+    height: 120px;
   }
   .slide__container {
     height: 150vw;
@@ -277,6 +319,14 @@ button.splide__pagination__page.is-active {
     top: 29px;
     left: 16px;
   }
+
+  .site-info{
+    top: 54px;
+  }
+
+  nav{
+    bottom: 16px;
+  }
 }
 
 .responsive-img{
@@ -286,9 +336,4 @@ button.splide__pagination__page.is-active {
 .caption{
   margin-top: 5px;
   margin-bottom: 50px;
-}
-
-.timestamps{
-  height: 20px;
-  width: 100px;
 }
