--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ header {
   grid-gap: 1rem;
 }
 
+.slide__grid--margin{
+  margin-bottom: 80px;
+}
+
 .slide__single {
   background-size: cover;
   background-position: center center;
@@ -166,7 +170,7 @@ button.splide__pagination__page.is-active {
 nav{
   text-align: center;
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   width: 100%;
 }
 
@@ -193,7 +197,7 @@ nav a:last-child{
 .site-info{
   text-align: center;
   position: absolute;
-  top: 11px;
+  top: 20px;
   width: 100%;
   font-weight: bold;
   font-size: 16px;
@@ -272,6 +276,9 @@ nav a:last-child{
   header {
     height: 120px;
   }
+  header.has-no-navigation{
+    height: 60px;
+  }
   .slide__container {
     height: 150vw;
   }
@@ -331,9 +338,11 @@ nav a:last-child{
 
 .responsive-img{
   max-width: 100%;
+  margin-bottom: 80px;
 }
 
 .caption{
   margin-top: 5px;
   margin-bottom: 50px;
 }
+
