--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 html, body {
   padding: 0;
   margin: 0;
   background-color: rgb(240, 240, 240);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 * {
   box-sizing: border-box;
@@ -27,6 +27,12 @@ footer {
 
 :root {
   --main-radius: 0px;
+}
+.text__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 32px;
+  margin-top: 40px;
 }
 
 .splide__slide {
@@ -122,7 +128,7 @@ button.splide__pagination__page.is-active {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1rem;
   margin-bottom: 100px;
-  margin-top: 120px;
+  margin-top: 40px;
 }
 
 .project{
@@ -273,6 +279,9 @@ nav a:last-child{
   main {
     width: 736px;
   }
+  .text__grid {
+    grid-template-columns: 1fr 1fr ;
+  }
   .slide__container {
     height: 505px;
   }
@@ -311,6 +320,11 @@ nav a:last-child{
   }
   header.has-no-navigation{
     height: 60px;
+  }
+  .text__grid {
+    grid-template-columns: 1fr;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .slide__container {
     height: 282vw;
