--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,15 @@ button.splide__pagination__page.is-active {
   color: white;
   font-size: 15px;
   opacity: 0;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+  cursor: pointer;
 }
 
 .logo{
