--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ main{
 }
 
 header {
-  height: 120px;
+  height: 150px;
   position: relative;
 }
 
@@ -241,7 +241,7 @@ nav a{
   text-decoration: none;
   border-right: 1px solid black;
   padding-right: 7px;
-  padding-left: 4px;
+  padding-left: 6px;
 }
 
 nav a:hover{
@@ -259,7 +259,7 @@ nav a:last-child{
 .site-info{
   text-align: center;
   position: absolute;
-  top: 20px;
+  top: 82px;
   width: 100%;
   font-weight: bold;
   font-size: 16px;
@@ -277,7 +277,10 @@ nav a:last-child{
     width: 992px;
   }
   header {
-    height: 80px;
+    height: 125px;
+  }
+  .site-info{
+    top: 57px;
   }
   .slide__container {
     height: 685px;
@@ -348,7 +351,7 @@ nav a:last-child{
     height: 172px;
   }
   .site-info{
-    top: 23px;
+    top: 82px;
   }
   nav{
     bottom: 20px;
@@ -366,7 +369,7 @@ nav a:last-child{
     width: 100vw;
   }
   header {
-    height: 120px;
+    height: 110px;
   }
   header.has-no-navigation{
     height: 60px;
@@ -470,10 +473,14 @@ nav a:last-child{
 
   .site-info{
     top: 54px;
+    font-size: 14px;
   }
 
   nav{
-    bottom: 16px;
+    bottom: 14px;
+  }
+  nav a{
+    font-size: 12px;
   }
 
   .caption{
@@ -488,6 +495,10 @@ nav a:last-child{
 .responsive-img{
   max-width: 100%;
   margin-bottom: 80px;
+}
+
+.responsive-img.no-margin{
+  margin-bottom: 0px;
 }
 
 
