--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,62 @@ nav a:last-child{
   width: 45%;
 }
 
+.kontakt__container{
+  position: absolute;
+  right: 0px;
+  top: 150px;
+  width: 300px;
+  height: 240px;
+  z-index: 10000;
+  overflow: hidden;
+}
+
+.kontakt__slide-container{
+  position: absolute;
+  left: 268px;
+  transition: 0.4s;
+}
+
+.kontakt__text{
+  background-color: #a20606;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 120px;
+  width: 32px;
+  cursor: pointer;
+  
+}
+.kontakt__text-inner{
+  position: absolute;
+  transform: rotateZ(270deg);
+  top: 49px;
+  left: -32px;
+  letter-spacing: 3px;
+  color: white;
+}
+
+.kontakt__info{
+  position: absolute;
+  left: 32px;
+  top: 0px;
+  width: 268px;
+  height: 240px;
+  background-color: #a20606;
+  color: white;
+  padding: 10px 8px 16px 16px;
+  font-size: 14px;
+}
+
+.kontakt__info a{
+  color: white;
+}
+
+.kontakt__slide-container.opened{
+    left: 0px;
+    transition: 0.4s;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1119px) {
   /* iPad landscape */
   main {
@@ -318,6 +374,9 @@ nav a:last-child{
     width: 992px;
     display: grid;
     grid-template-columns: 0fr 1fr 1fr;
+  }
+  .kontakt__container{
+    top: 125px;
   }
 }
 
@@ -388,7 +447,7 @@ nav a:last-child{
   .text__grid {
     grid-template-columns: 1fr;
     padding-left: 16px;
-    padding-right: 16px;
+    padding-right: 28px;
   }
   .slide__container {
     height: 282vw;
@@ -490,6 +549,12 @@ nav a:last-child{
     padding-left: 16px;
     padding-right: 16px;
   }
+  .kontakt__container{
+    top: 150px;
+  }
+  .kontakt__container--home {
+    top: calc(150vw + 103px);
+  }
 }
 
 .responsive-img{
@@ -500,6 +565,3 @@ nav a:last-child{
 .responsive-img.no-margin{
   margin-bottom: 0px;
 }
-
-
-
