Added arrow right as png

--- a/styles.css
+++ b/styles.css
@@ -144,12 +144,12 @@ button.splide__pagination__page.is-active {
   width: 20%;
 }
 .splide__arrow--next {
+  cursor: url('imgs/arrow-right.png') 23 0, auto !important;
   right: 0;
-  cursor: url('imgs/arrow-right.svg'), auto !important;
 }
 .splide__arrow--prev {
-  left: 0;
   cursor: url('imgs/arrow-left.svg'), auto !important;
+  left: 0;
 }
 .splide__arrow svg {
   opacity: 0;
@@ -278,18 +278,31 @@ nav a:last-child{
   position: absolute;
   right: 0px;
   top: 125px;
-  width: 300px;
-  height: 240px;
-  z-index: 1;
+  width: 32px;
+  height: 120px;
+  z-index: 10000;
   overflow: hidden;
+
+  transition: width 0.4s, height 0.1s 0.4s;
 }
 .kontakt__container.opened{
-  z-index: 10000;
+
+  right: 0px;
+  top: 125px;
+  width: 300px;
+  height: 240px;
+
+  transition: width 0.4s;
 }
 
 .kontakt__slide-container{
   position: absolute;
-  left: 268px;
+  left: 0; /*268px;*/
+  transition: 0.4s;
+}
+
+.kontakt__slide-container.opened{
+  left: 0px;
   transition: 0.4s;
 }
 
@@ -328,10 +341,7 @@ nav a:last-child{
   color: white;
 }
 
-.kontakt__slide-container.opened{
-    left: 0px;
-    transition: 0.4s;
-}
+
 
 @media only screen and (min-width: 1024px) and (max-width: 1119px) {
   /* iPad landscape */
